tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__chat_composer__tests__footer_mode_shell_command_absorbs_bang.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"! git status                                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  gpt-5.4 high fast · ~/code/ody-1 · Context 0% used                                    Shell mode  "
"                                                                                       context: --  "
